--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,6 +40,7 @@ body,
 html {
   background-color: $off-white;
   height: 100%;
+  overflow-x: hidden;
 }
 
 img {
@@ -61,11 +62,12 @@ h6 {
 
 .main-container {
   font-family: "Red Hat Display", sans-serif;
+  min-height: 100%;
 }
 
 // logo
 .logo-container {
-  padding-top: 50px;
+  padding-top: 80px;
 }
 .logo-container img {
   margin: auto;
@@ -75,7 +77,7 @@ h6 {
 .header-container {
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
+  margin-top: 60px;
   min-height: 358px;
   & .hero-left {
     align-self: flex-start;
@@ -155,7 +157,7 @@ h6 {
 // number and line
 .number-and-line {
   display: block;
-  margin-top: 55px;
+  margin-top: 100px;
   & .number {
     border: 1px solid $number-border;
     max-width: 56px;
@@ -219,6 +221,7 @@ h6 {
     max-width: 505px;
     margin: auto;
     margin-top: 30px;
+    font-weight: 400;
   }
 }
 // number line footer
@@ -327,6 +330,12 @@ footer {
   }
   .group-header p {
     font-size: 16px;
+    font-weight: 400;
+    max-width: 440px;
+    margin-bottom: 10px;
+  }
+  .number-line-footer.number-and-line {
+    margin-top: 37px;
   }
   .images {
     padding: 0 18px;
@@ -347,6 +356,12 @@ footer {
   footer {
     background-image: url("../assets/tablet/image-footer.jpg");
     min-height: 428px;
+  }
+
+  .footer-container {
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
     & h2,
     & p {
       margin: 0;
@@ -361,12 +376,6 @@ footer {
       text-align: center;
     }
   }
-
-  .footer-container {
-    flex-direction: column;
-    align-items: center;
-    gap: 40px;
-  }
 }
 
 @include mq(small) {
@@ -375,6 +384,10 @@ footer {
     & img {
       left: -20px;
     }
+  }
+
+  .number-line-footer.number-and-line {
+    margin-top: 37px;
   }
 
   .group-header h1 {
